--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text">EXPERIENCES PROFESSIONNELLES</h3>
+                <h3 class="mbr-header__text">WORK EXPERIENCE</h3>
                 
             </div>
         </div>
